--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -1,7 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
 name: SwecondWorkflow
-
+ env:
+ msg = I am form variable
+ varible_name = Yusuf
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -27,10 +29,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo $msg
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo This job is running in the second workflow.
+          echo My name is $variable_name
