--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -2,8 +2,8 @@
 
 name: SwecondWorkflow
 env:
- msg = I am form variable
- varible_name = Yusuf
+ msg: I am form variable
+ varible_name: Yusuf
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -29,10 +29,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo $msg
+        run: echo "$msg"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo My name is $variable_name
+          echo "My name is.$variable_name"
