--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -2,8 +2,8 @@
 
 name: SwecondWorkflow
 env:
- msg: I am form variable
- varible_name: Yusuf
+ msg: "I am form variable"
+ varible_name: "Code 80"
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
