--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -2,8 +2,8 @@
 
 name: SwecondWorkflow
 env:
- msg: "I am form variable"
- varible_name: 80
+ msg : "I am form variable"
+ var_name : 80
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -35,4 +35,4 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo My name is $variable_name
+          echo My name is $var_name
