--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -36,3 +36,12 @@ jobs:
         run: |
           echo Add other actions to build,
           echo My name is $var_name
+  Job2:
+    runs-on: ubuntu-latest
+   #fsjfsff
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
+      - run: python script.py
