--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -20,7 +20,7 @@ jobs:
   # This workflow contains a single job called "build"
   FirstJob:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,7 +38,7 @@ jobs:
           echo My name is $var_name
 
   Job2:
-    runs-on: ubuntu-latest
+    runs-on: runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
