--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -38,7 +38,7 @@ jobs:
           echo My name is $var_name
 
   Job2:
-    runs-on: runs-on: self-hosted
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
