--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -38,10 +38,10 @@ jobs:
           echo My name is $var_name
 
   Job2:
-    runs-on: self-hosted
+    runs-on: Windows-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python script.py
+      - run: python Scrippt/** 
