--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -44,4 +44,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python Scrippt/** 
+      - name: mypython
+        run: python Scrippt/** 
