--- a/.github/workflows/Yusuf.yml
+++ b/.github/workflows/Yusuf.yml
@@ -1,9 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
 name: SecondWorkflow
-env:
- msg : "I am form variable"
- var_name : 80
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -29,13 +25,13 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo $msg
+        run: echo knjk
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo My name is $var_name
+          echo My name is uo
 
   Job2:
     runs-on: Windows-latest
